# TimeSync

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp32s3box
components/lua/: CMakeLists.txt  lauxlib.h  luaconf.h
components/luavgl/: CMakeLists.txt  constants.c  fs.c  luavgl.c  luavgl.h  private.h
components/luavgl/widgets/: keyboard.c  list.c  widgets.c
components/lvgl/: lvgl.h
data/apps/: test.lua
include/: lv_conf.h
lib/: lv_conf.h
lib/Alarm/: Alarm.cpp  Alarm.h
lib/AppManager/: AppManager.cpp  AppManager.h
lib/AppSelector/: AppSelector.cpp  AppSelector.h
lib/AwakeManager/: AwakeManager.cpp  AwakeManager.h
lib/BatteryManager/: BatteryManager.cpp  BatteryManager.h
lib/BuzzerDriver/: BuzzerDriver.c  BuzzerDriver.h
lib/Clock/: Clock.cpp  Clock.h
lib/ClockComponent/: ClockComponent.cpp  ClockComponent.h
lib/ConfigManager/: ConfigManager.cpp  ConfigManager.h
lib/FileManager/: FileManager.cpp  FileManager.h
lib/Fitness/: Fitness.cpp  Fitness.h
lib/FitnessManager/: FitnessManager.cpp  FitnessManager.h
lib/GraphicsDriver/: GraphicsDriver.cpp  GraphicsDriver.h  display.c  display.h  esp_lcd_gc9a01.c  gc9a01.c  gc9a01.h
lib/HD44780/: HD44780.c  HD44780.h
lib/IApp/: IApp.h
lib/IUIComponent/: IUIComponent.h
lib/InputManager/: InputManager.cpp  InputManager.h
lib/LVGLMutex/: LVGLMutex.cpp  LVGLMutex.h
lib/ListComponent/: ListComponent.cpp  ListComponent.h
lib/MotionDebug/: MotionDebug.cpp  MotionDebug.h
lib/MotionDriver/: MotionDriver.cpp  MotionDriver.h
src/: CMakeLists.txt  main.cpp
(+40 files in other folders)
